<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_popup_bg"
    android:tag="quit_from_game_fragment"
    tools:context=".dialogs.QuitGameDialogFragment">


    <TextView
        android:id="@+id/text_are_you_sure2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/lapsus_pro_bold"
        android:gravity="center"
        android:minWidth="100dp"
        android:text="@string/are_you_sure_you_want_to_quit_you_and_all_other_players_will_be_sent_back_to_the_lobby"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_cancel2"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lapsus_pro_bold"
        android:text="@string/cancel"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_are_you_sure2" />

    <Button
        android:id="@+id/button_confirm2"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/lapsus_pro_bold"
        android:text="@string/ok"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/text_are_you_sure2" />

    <Space
        android:id="@+id/space"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_confirm2"
        app:layout_constraintStart_toEndOf="@id/button_cancel2"
        app:layout_constraintTop_toBottomOf="@+id/text_are_you_sure2" />

</androidx.constraintlayout.widget.ConstraintLayout>